# beamng-borderless-ultrawide

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.ini
.github/workflows/: build.yml  release.yml
injector/: main.cpp
src/: config.cpp  config.h  dllmain.cpp  hooks.cpp  hooks.h
